added text and minor change

--- a/graphEditor/css/Editor.css
+++ b/graphEditor/css/Editor.css
@@ -7,3 +7,10 @@
    float: left;
 }
 
+#property-container p {
+	display: inline;
+}
+#property-container input {
+	display: inline;
+	width: 100px;
+}
