-add color property text box

--- a/umlEditor/css/Editor.css
+++ b/umlEditor/css/Editor.css
@@ -10,3 +10,11 @@ table {
     opacity: 1;
     float: left;
 }
+
+#property-container p {
+    display: inline;
+}
+#property-container input {
+    display: inline;
+    width: 100px;
+}
