--- a/umlEditor/css/Editor.css
+++ b/umlEditor/css/Editor.css
@@ -13,7 +13,7 @@ table {
 
 #property-container p {
     display: inline;
-  	margin-right: 25px;
+    margin-right: 25px;
 }
 
 #property-container input {
@@ -24,9 +24,13 @@ table {
 }
 
 #nodeContainer th {
-	padding: 10px;
+    padding: 10px;
 }
 
 #nodeContainer td {
-	border-top: 1px solid;
+    border-top: 1px solid;
+}
+
+#toolbar-container{
+    border: none;
 }
