--- a/umlEditor/css/Editor.css
+++ b/umlEditor/css/Editor.css
@@ -31,6 +31,19 @@ table {
     border-top: 1px solid;
 }
 
-#toolbar-container{
+#toolbar-container {
     border: none;
 }
+
+#note-property-container p {
+    display: inline;
+    margin-right: 25px;
+}
+
+#note-property-container input {
+    display: inline;
+    width: 150px;
+    height: 18px;
+    float: right;
+
+
