--- a/graphEditor/css/Editor.css
+++ b/graphEditor/css/Editor.css
@@ -15,6 +15,12 @@ body {
    float: left;
 }
 
+.tBButton-on {
+   opacity: 1;
+   background-color: orange;
+   float: left;
+}
+
 #property-container p {
 	display: inline;
 }
